@@ -76,6 +76,19 @@ tasks.register('downloadTestData') {
     }
 }
 
+tasks.register('test128', Test) {
+    dependsOn downloadTestData
+    useJUnitPlatform()
+    jvmArgs += [
+            '--add-modules', 'jdk.incubator.vector',
+            '-Xmx2g',
+            '-Dorg.simdjson.species=128'
+    ]
+    testLogging {
+        events 'PASSED', 'SKIPPED', 'FAILED', 'STANDARD_OUT', 'STANDARD_ERROR'
+    }
+}
+
 tasks.register('test256', Test) {
     dependsOn downloadTestData
     useJUnitPlatform()
@@ -103,6 +116,7 @@ tasks.register('test512', Test) {
 }
 
 test {
+    dependsOn 'test128'
     dependsOn 'test256'
     dependsOn 'test512'
 }
